v2.0.0-rc4
--------------------------------------------------------------------------------
 * fixing an uninitialized status code when pollsets are not used for streams.

v2.0.0-rc3
--------------------------------------------------------------------------------
 * Added an alternate implementation when polling of file descriptors is
   not supported by the OS. This is automatically detected via the APR
   header files, but can be enforces by adding '--disable-poll-streams'
   to the './configure' when building the module.
   This should allow the module to work on Windows again.

v2.0.0-rc2
--------------------------------------------------------------------------------
 * Switching from a thread-safe apr pollset (not supported under Windows) to
   a wakeable pollset implementation.
 * Adding a clear error in the logs if the pollset could not be created.

v2.0.0-rc1
--------------------------------------------------------------------------------
 * HTTP/2 connections now use pollsets to monitor the status of the
   ongoing streams and their main connection.
 * Fixed a bug where, without 'H2SerializeHeaders' some errors, such
   as a input timeout, did not produce the correct response.
 * Added directove 'H2StreamTimeout' to configure a separate value for HTTP/2
   streams, overriding server's 'Timeout' configuration. [rpluem]
 * Removed work-arounds for older versions of libnghttp2 and checking
   during configure that at least version 1.15.0 is present. Which, due
   to its age, should not make a difference to anyone.
 * The HTTP/2 connection state handler, based on an experiment and draft
   at the IETF http working group (abandoned for some time), has been removed.
 * H2SerializeHeaders no longer has an effect. A warning is logged when it is
   set to "on". The switch enabled the internal writing of requests to be parsed
   by the internal HTTP/1.1 protocol handler and was introduced to avoid
   potential incompatibilities during the introduction of HTTP/2.